[gd_scene load_steps=3 format=3 uid="uid://b24jestbgip48"]

[ext_resource type="Script" path="res://scenes/debug/test_car_mechanics/test_car_mechanics.gd" id="1_2idc6"]
[ext_resource type="PackedScene" uid="uid://l6cthaxci5xd" path="res://cars/models/chal/chal.tscn" id="1_8spar"]

[node name="TestCarMechanics" type="Node3D"]
script = ExtResource("1_2idc6")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="CarHolder" type="Node3D" parent="."]

[node name="Chal" parent="CarHolder" instance=ExtResource("1_8spar")]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 4, 1, 0)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TestDragRun" type="Control" parent="UI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HBoxContainer/TestDragRun"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="UI/HBoxContainer/TestDragRun/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 25
text = "Test drag run"
horizontal_alignment = 1
autowrap_mode = 2

[node name="CurrentSpeedMSLabel" type="Label" parent="UI/HBoxContainer/TestDragRun/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 20
text = "Current speed (m/s): 999"
horizontal_alignment = 1
autowrap_mode = 2

[node name="CurrentSpeedKMHLabel" type="Label" parent="UI/HBoxContainer/TestDragRun/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 20
text = "Current speed (km/h): 999"
horizontal_alignment = 1
autowrap_mode = 2

[node name="CurrentRPMLabel" type="Label" parent="UI/HBoxContainer/TestDragRun/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 20
text = "Current RPM: 10500"
horizontal_alignment = 1
autowrap_mode = 2

[node name="CurrentGearLabel" type="Label" parent="UI/HBoxContainer/TestDragRun/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 20
text = "Gear: N"
horizontal_alignment = 1
autowrap_mode = 2

[node name="UpShiftButton" type="Button" parent="UI/HBoxContainer/TestDragRun/VBoxContainer"]
visible = false
layout_mode = 2
text = "Shift up"

[node name="StartRunButton" type="Button" parent="UI/HBoxContainer/TestDragRun/VBoxContainer"]
layout_mode = 2
text = "Start run"

[node name="EndRunButton" type="Button" parent="UI/HBoxContainer/TestDragRun/VBoxContainer"]
visible = false
layout_mode = 2
text = "End run"

[node name="TestZeroTo100TimeLabel" type="Label" parent="UI/HBoxContainer/TestDragRun/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 20
text = "0-100 km/h: 999s"
horizontal_alignment = 1
autowrap_mode = 2

[node name="400MTimeLabel" type="Label" parent="UI/HBoxContainer/TestDragRun/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 20
text = "400m time: 999s"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Control2" type="Control" parent="UI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control3" type="Control" parent="UI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CarDetails" type="Control" parent="UI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HBoxContainer/CarDetails"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameAndManufacturerLabel" type="Label" parent="UI/HBoxContainer/CarDetails/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 25
text = "MANUFACTURER - NAME"
horizontal_alignment = 1
autowrap_mode = 2

[node name="TopSpeedMSLabel" type="Label" parent="UI/HBoxContainer/CarDetails/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 20
text = "Top speed (m/s): 999"
horizontal_alignment = 1
autowrap_mode = 2

[node name="TopSpeedKPHLabel" type="Label" parent="UI/HBoxContainer/CarDetails/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 20
text = "Top speed (km/h): 999"
horizontal_alignment = 1
autowrap_mode = 2

[node name="0-100TimeLabel" type="Label" parent="UI/HBoxContainer/CarDetails/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 20
text = "0-100 km/h: 999 s"
horizontal_alignment = 1
autowrap_mode = 2

[node name="GearsLabel" type="Label" parent="UI/HBoxContainer/CarDetails/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 20
text = "Gears: 12"
horizontal_alignment = 1
autowrap_mode = 2

[node name="RedlineLabel" type="Label" parent="UI/HBoxContainer/CarDetails/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 20
text = "Redline: 10500 RPM"
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="UI/HBoxContainer/TestDragRun/VBoxContainer/UpShiftButton" to="." method="_on_up_shift_button_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/TestDragRun/VBoxContainer/StartRunButton" to="." method="_on_start_run_button_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/TestDragRun/VBoxContainer/EndRunButton" to="." method="_on_end_run_button_pressed"]
